ajustes de pastas

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="src/css/styles.css" />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" type="image/x-icon" href="/src/img/favicon.ico" />
+    <link rel="manifest" href="src/script/manifest.json" />
     <title>CRUD com Firebase</title>
   </head>
   <body>
@@ -129,6 +129,6 @@
       </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="src/script/app.js"></script>
   </body>
 </html>
