--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="src/css/styles.css" />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-    <link rel="icon" type="image/x-icon" href="/src/img/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="src/img/favicon.ico" />
     <link rel="manifest" href="src/script/manifest.json" />
     <title>CRUD com Firebase</title>
   </head>
